@@ -14,7 +14,6 @@ Tâches libres :
 	- Rajouter la posibilité de faire des traitement sur les fichiers téléchargés ? [Possible ?]
 	- Vérifier le support des caractères NON-ascci partout [Prioritaire ?]
 À ranger :
-	- Exportation d'une clé dans le menu [Prioritaire ?]
 	- Création du 'gestionnaire de trousseau' avec  [Prioritaire ?]
 		- Nouvelle clé
 		- Édition confiance clé
