@@ -28,3 +28,4 @@ GMailNoS=No sign found in this mail !
 GMailSErr=The first sign of this mail is wrong !
 GMailD=Decrypt this mail
 gmailSelectError=Please select a part of your mail !
+exportFailed=Export failed. Unknown error.
