@@ -28,3 +28,4 @@ GMailNoS=Aucune signature n'a été trouvée dans ce courriel
 GMailSErr=La première signature de ce courriel est incorrecte.
 GMailD=Déchiffrer le courriel.
 gmailSelectError=Sélectionnez une partie de votre courriel.
+exportFailed=Erreur inconnue. L'exportation a échoué.
